# PerspectiveSolver

./: CMakeLists.txt  README.md  main.cpp  perspectiveSolver.sln
PerspectiveSolver/: PerspectiveSolver.sln
PerspectiveSolver/PerspectiveSolver/: PerspectiveSolver.vcxproj
example_glfw_opengl3/: CMakeLists.txt  example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  imgui.ini  main.cpp  resource.h  solver.aps
example_glfw_opengl3/Debug/: solver.ilk  vc142.idb
example_glfw_opengl3/Debug/example_.4a1fb5ea.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  example_glfw_opengl3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
example_glfw_opengl3/Debug/solver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  solver.lastbuildstate
example_glfw_opengl3/Release/: solver.ipdb
example_glfw_opengl3/Release/solver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  solver.lastbuildstate  solver.write.1u.tlog
